<resources>
    <string name="app_name">RxRapidApi Demo</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_api">Try the Spotify API</string>
    <string name="title_activity_spotify_search">Spotify Search</string>
    <string name="search_terms">Search Terms</string>
    <string name="search_in">Search In:</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="tracks">Tracks</string>
    <string name="more">(more…)</string>
    <string name="title_activity_results">Spotify Results</string>
    <string name="nasa_api">Use the Nasa API</string>
    <string name="hackernews_api">Take a look at HackerNews</string>
    <string name="title_hacker_news">Hacker News</string>
    <string name="title_nasa">Nasa API</string>
</resources>
