<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gatebuzz.rapidapi.rx.example.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/spotify"
        style="@style/ColorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_api" />

    <Button
        android:id="@+id/nasa"
        style="@style/ColorButton"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nasa_api" />

    <Button
        android:id="@+id/hackernews"
        style="@style/ColorButton"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hackernews_api" />
</LinearLayout>
