<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gatebuzz.rapidapi.rx.example.spotify.SpotifySearchActivity"
    tools:showIn="@layout/activity_spotify_search">

    <LinearLayout
        android:id="@+id/content_spotify_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/search_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_terms" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/search_in" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">

            <TableRow>

                <ViewFlipper android:id="@+id/album_progress">

                    <CheckBox
                        android:id="@+id/albums_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/albums" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="8dp"
                        android:paddingTop="6dp">

                        <ProgressBar
                            android:id="@+id/album_progress_spinner"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp" />

                        <ImageView
                            android:id="@+id/album_progress_icon"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginEnd="4dp"
                            app:srcCompat="@drawable/ic_check_black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:text="@string/albums" />
                    </LinearLayout>

                </ViewFlipper>

                <ViewFlipper android:id="@+id/artists_progress">

                    <CheckBox
                        android:id="@+id/artists_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/artists" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="8dp"
                        android:paddingTop="6dp">

                        <ProgressBar
                            android:id="@+id/artists_progress_spinner"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp" />

                        <ImageView
                            android:id="@+id/artists_progress_icon"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginEnd="4dp"
                            app:srcCompat="@drawable/ic_check_black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:text="@string/artists" />
                    </LinearLayout>
                </ViewFlipper>
            </TableRow>

            <TableRow>

                <ViewFlipper android:id="@+id/playlists_progress">

                    <CheckBox
                        android:id="@+id/playlists_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/playlists" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="8dp"
                        android:paddingTop="6dp">

                        <ProgressBar
                            android:id="@+id/playlists_progress_spinner"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp" />

                        <ImageView
                            android:id="@+id/playlists_progress_icon"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginEnd="4dp"
                            app:srcCompat="@drawable/ic_check_black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:text="@string/playlists" />
                    </LinearLayout>
                </ViewFlipper>

                <ViewFlipper android:id="@+id/tracks_progress">

                    <CheckBox
                        android:id="@+id/tracks_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tracks" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="8dp"
                        android:paddingTop="6dp">

                        <ProgressBar
                            android:id="@+id/tracks_progress_spinner"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp" />

                        <ImageView
                            android:id="@+id/tracks_progress_icon"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginEnd="4dp"
                            app:srcCompat="@drawable/ic_check_black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:text="@string/tracks" />
                    </LinearLayout>
                </ViewFlipper>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/top_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="128dp"
            android:orientation="vertical" />
    </LinearLayout>
</ScrollView>